--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,11 +23,17 @@
       </ul>
     </nav>
   </div>
-  
-  <main>
-  </main>
+
+<main style="text-align: center">
+  <ol type="A" style="display: inline-block">
+    <p class="maquina-escribir"> Datos... pacientes... salas... hospital...................<strong style="color: red">BitMed</strong><span class="cursor">|</span></p>
+</main>
+
+
+
 
   <footer>
+  <p>Copyright &copy;</p>
   </footer>
 
 </body>
