--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,32 +1,12 @@
 
+
+
+
 <body>
-  <header>
-    <h1>Bienvenido a Bitmed</h1>
-  </header>
-
   
-  <div class="interior">
-    
-    <nav class="navegation">
-      <ul>
-        
-        <li><a href="/">Inicio</a></li>
-        <li>
-          <a href="Funciones">Funciones</a>
-          <ul>
-            <li><%= link_to 'Pacientes', patients_path %></li>
-          </ul>
-        </li>
-        <li><a href="Contacto">Contacto</a></li>
-        <li><a href="Base de datos">Base de datos</a></li>
-        <li><a href="Log in">Log in</a></li>
-      </ul>
-    </nav>
-  </div>
-
-<main style="text-align: center">
+<main>
   <ol type="A" style="display: inline-block">
-    <p class="maquina-escribir"> Datos... pacientes... salas... hospital...................<strong style="color: red">BitMed</strong><span class="cursor">|</span></p>
+    <p class="maquina-escribir"> ........................................ <strong style="color: white">BitMed.</strong><span class="cursor">|</span></p>
 </main>
 
 
