--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,63 +1,30 @@
 <main>
 <body>
   <header>
-    <h1>Mis pacientes</h1>
+    <h2>Mis pacientes</h2>
   </header>
-  <div class="interior">
-    <a href="" class="logo"><img src="images/logo.png" alt=""></a>
-    <nav class="navegation">
-      <ul>
-        <li><a href="/">Inicio</a></li>
-        <li>
-          <a href="Funciones">Funciones</a>
-          <ul>
-            <li><%= link_to 'Pacientes', patients_path %></li>
-          </ul>
-        </li>
-        <li><a href="Contacto">Contacto</a></li>
-        <li><a href="Base de datos">Base de datos</a></li>
-        <li><a href="Log in">Log in</a></li>
-      </ul>
-    </nav>
-  </div>
-  <style>
-  .data-group {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .data-group span {
-    margin-right: 20px;
-  }
-</style>
-
-<script>
-  function toggleDataGroup(event) {
-    var dataGroup = event.target.nextElementSibling;
-    dataGroup.style.display = dataGroup.style.display === 'none' ? 'flex' : 'none';
-  }
-</script>
-
+ 
 <main>
-  <h1><%= @patient.name + " " + @patient.lastname %></h1>
-    <div class="data-group">
+  <h2><%= @patient.name + " " + @patient.lastname %></h2>
+    <div class="data-group-general">
       <span><strong>DNI:</strong> <%= @patient.dni %></span>
       <span><strong>Fecha de nacimiento: </strong> <%= @patient.birth_date %></span>
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Datos de contacto</h3>
-    <div class="data-group">
+    <div class="data-group-contact">
       <span><strong>Dirección:</strong> <%= @patient.try(:address) %></span>
       <span><strong>Teléfono:</strong> <%= @patient.try(:phone) %></span>
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Historia</h3>
-    <div class="data-group">
+    <div class="data-group-records">
       <span><strong>Historia familiar:</strong> <%= @patient.try(:family_history) %></span>
       <span><strong>Historia personal:</strong> <%= @patient.try(:personal_history) %></span>
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Composicion familiar</h3>
-    <div class="data-group">
+    <div class="data-group-family">
       <span><strong>Número de hijos:</strong> <%= @patient.try(:children) %></span>
       <span><strong>Pareja:</strong> <%= @patient.try(:partner) %></span>
       <span><strong>Padres:</strong> <%= @patient.try(:parents) %></span>
@@ -65,12 +32,12 @@
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Datos laborales</h3>
-    <div class="data-group">
+    <div class="data-group-job">
       <span><strong>Ocupación:</strong> <%= @patient.try(:occupation) %></span>
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Habitos</h3>
-    <div class="data-group">
+    <div class="data-group-habits">
       <span><strong>Dieta:</strong> <%= @patient.try(:diet) %></span>
       <span><strong>Ejercicio:</strong> <%= @patient.try(:exercise) %></span>
       <span><strong>Uso de sustancias:</strong> <%= @patient.try(:substance_use) %></span>
@@ -78,10 +45,10 @@
     </div>
 
     <h3 onclick="toggleDataGroup(event)">Consultas</h3>
-      <div class="field">
+      <div class="consult-field">
         <span><strong>Registro de consultas:</strong> <%= @patient.try(:consult_record) %></span>
         <%= form_with(model: @patient, local: true) do |form| %>
-          <div class="field">
+          <div class="consult-field">
             <%= form.label :consult_record, "Nueva consulta:" %>
             <%= form.text_field :consult_record %>
           </div>
@@ -93,6 +60,7 @@
 
     </div>
 </main>
+
 
 </body>
 </main>
