--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -7,27 +7,7 @@
 <body>
 
  <header>
-    <h1>Mis pacientes</h1>
-  </header>
-  <div class="interior">
-    <a href="" class="logo"><img src="images/logo.png" alt=""></a>
-    <nav class="navegation">
-      <ul>
-        <li><a href="/">Inicio</a></li>
-        <li>
-          <a href="Funciones">Funciones</a>
-          <ul>
-            <li><%= link_to 'Pacientes', patients_path %></li>
-          </ul>
-        </li>
-        <li><a href="Contacto">Contacto</a></li>
-        <li><a href="Base de datos">Base de datos</a></li>
-        <li><a href="Log in">Log in</a></li>
-        
-      </ul>
-    </nav>
-  </div>
-
+  
   <header>
     <h2>Crear nuevo paciente</h2>
   </header>
@@ -35,6 +15,12 @@
   <main>
     <h3>Datos filiales</h3>
     <%= form_with(model: @patient, local: true) do |form| %>
+      <%= @patient.errors.full_messages.each do |error| %>
+      <div>
+        <%= error %>
+      </div>
+      <% end %>
+
       <div class="field">
         <%= form.label :name, "Nombre:" %>
         <%= form.text_field :name %>
