Creaccion de modelo 'consultas'

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -3,7 +3,9 @@
   <header>
     <h2>Mis pacientes</h2>
   </header>
- 
+
+<%= image_tag @patient.photo, width: 200  %>
+
 <main>
   <h2><%= @patient.name + " " + @patient.lastname %></h2>
     <div class="data-group-general">
@@ -16,6 +18,9 @@
       <span><strong>Dirección:</strong> <%= @patient.try(:address) %></span>
       <span><strong>Teléfono:</strong> <%= @patient.try(:phone) %></span>
     </div>
+<%
+=begin%>
+ 
 
     <h3 onclick="toggleDataGroup(event)">Historia</h3>
     <div class="data-group-records">
@@ -42,7 +47,9 @@
       <span><strong>Ejercicio:</strong> <%= @patient.try(:exercise) %></span>
       <span><strong>Uso de sustancias:</strong> <%= @patient.try(:substance_use) %></span>
       <span><strong>Actividad sexual:</strong> <%= @patient.try(:sexual_activity) %></span>
-    </div>
+    </div> 
+<%
+=end%>
 
     <h3 onclick="toggleDataGroup(event)">Consultas</h3>
       <div class="consult-field">
@@ -52,10 +59,28 @@
             <%= form.label :consult_record, "Nueva consulta:" %>
             <%= form.text_field :consult_record %>
           </div>
+          
+    <%= link_to 'Ver consultas', patient_consults_path(@patient) %>
+
+
+    
+
     <div class="actions">
-      <%= form.submit "Actualizar" %>
+      <%= form.submit "Actualizar", class: "btn btn-primary" %>
     </div>
-  <% end %>
+      <p>
+    <li><%= link_to "Editar paciente", edit_path(@patient), class: "btn btn-primary" %></li>
+      <p>
+    <li><%= link_to "Eliminar paciente", patients_path(@patient), class: "btn btn-danger", data: {
+            turbo_method: :delete,
+            turbo_confirm: "¿Esta seguro de querer eliminar este paciente?"
+            } %></li>
+
+      <p>
+    <% end %>
+
+   
+
 </div>
 
     </div>
