--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -15,6 +16,8 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    
   </head>
 
   <body>
@@ -23,7 +26,8 @@
 
     <header>
       <div class="interior">
-        <a href="" class="logo"><img src="images/logo.png" alt=""></a>
+      <!--  <a href="" class="logo"><img src="images/logo.png" alt=""></a> -->
+
         <%= render 'shared/navegation' %>
         <%= render 'shared/flash' %>
       </div>
