--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,3 +1,6 @@
+<h3>Editar paciente </h3>
+<h3><%=  t('.title') %></h3>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +16,6 @@
   </header>
 
   <main>
-  
     <h3>Datos filiales</h3>
     <%= form_with(model: @patient, local: true) do |form| %>
       <%= @patient.errors.full_messages.each do |error| %>
@@ -55,12 +57,6 @@
         <% form.label :phone, "Numero de telefono" %>
         <% form.number_field :phone %>
       </div>
-    <h3>Imagen</h3>
-      <div class="field">
-        <%= form.label :photo %>
-        <%= form.file_field :photo %>
-      </div>
-
 
       
     <h3>Composicion familiar</h3>
@@ -74,13 +70,14 @@
     <h3>Antecedentes familiares</h3>
     <h3>Antecedentes personales</h3>
       <div class="actions">
-        <%= form.submit "Crear" %>
+        <%= form.submit "Confirmar cambios" %>
       </div>
     <% end %>
   </main>
 
   <footer>
-    <!-- Aquí puedes agregar un pie de página si lo necesitas -->
+    
   </footer>
 </body>
 </html>
+
