creacion de login y creacion, solucion de orden de estilos

--- a/app/views/shared/_navegation.html.erb
+++ b/app/views/shared/_navegation.html.erb
@@ -9,6 +9,6 @@
             </li>
             <li><a href="Contacto">Contacto</a></li>
             <li><a href="Base de datos">Base de datos</a></li>
-            <li><a href="Log in">Log in</a></li>
+            <li><%= link_to 'Log in', new_authentication_session_path %></li>
     </ul>
 </nav>
